# ClusPot

./: .gitignore  README.md  pyproject.toml
cluspotlib/: __init__.py
cluspotlib/analysis/: __init__.py  analysis.py  metrics.py  plots.py
cluspotlib/calculation/: __init__.py  runner.py
cluspotlib/data/: __init__.py  build_db.py  build_qcd_db.py
cluspotlib/per_element/: __init__.py  per_element.py
docs/: app.js  build_data.py  data.json  elements.js  index.html  render_clusters.py  styles.css
