[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cluspotlib"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ase",
    "openpyxl",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
